# SelfDrivingCar

./: .gitignore  CMakeLists.txt  Car.cpp  Car.h  Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  Population.cpp  Population.h  README.md  Track.cpp  Track.h  UI.cpp  UI.h  main.cpp
assets/: track1  track2
neuralnetwork/: Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h
utils/: BezierUtils.cpp  BezierUtils.h  CollisionUtils.cpp  CollisionUtils.h  MathUtils.cpp  MathUtils.h
